# muscit

./: .gitignore  .readthedocs.yml  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
docs/: Makefile
docs/source/: analysis.rst  api.rst  conf.py  index.rst  lmc.rst  markov.rst  modules.rst  trajec_io.rst
src/analysis/: msd.py  msd_from_md.py
src/lmc/: educational_create_propagation_matrix.py  find_jumps.py  jump_rates_and_fit.py  misp_lmc.py  prepare_lmc.py  propagation_matrix.py
src/markov/: matrix.py
src/trajec_io/: readwrite.py
tests/: check_comment_in_trajek.py  conftest.py  design_func.py  purge_output  test_easy_read_v1.py  test_readwrite_design_trajec.py  test_warp_com_design_trajec.py
tests/data_o_nine/: cell  pickle_dist_mat_angle.p  pickle_jump_mat_proc.p  ref_pickle_jump_mat_o_nine.p
tests/design_trajec/: fix_trajec.xyz  pbc  periodic.xyz  periodic_long_diff.xyz  periodic_long_diff_wrap.xyz  periodic_pbc_jumps.xyz
tests/ref_data_trajec/: pbc_li13si4
tests/test_01_create_propagation_matrix/: fermi_param_OO  test_1_jump_mat.py
tests/test_com_1_atom_18/: hole_coord.xyz  test_com_1atom.py
tests/test_create_propagation_matrix_400_4/: test_4_jump_mat.py
tests/test_educational_create_propagation_matrix_2/: test_2_jump_mat.py
tests/test_jump_rate_function_13/: pbc
tests/test_markov_model_li12si7_21/: test_21.py
tests/test_markov_model_o_line_two_tau_steps_19/: aimd_automtic_create  aimd_from_neighbor_automtic_create  msd_from_jump_info_automtic_create  msd_from_neigh_automtic_create
tests/test_markov_model_o_line_two_tau_steps_20/: aimd_automtic_create  aimd_from_neighbor_automtic_create  msd_from_jump_info_automtic_create  msd_from_neigh_automtic_create  pbc
tests/test_misp_3/: test_3_misp.py
tests/test_misp_diff_vs_markov_o_2dgrid_17/: test_markov17.py  test_misp_8_prot.py
(+129 files in other folders)
